integrated wireui and configured jetstream profilepage

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
-        "spatie/laravel-permission": "^6.16"
+        "spatie/laravel-permission": "^6.16",
+        "wireui/wireui": "^2.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
