add image uploading functionality with Article using  | laravel-medialibrary

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
+        "spatie/laravel-medialibrary": "^11.12",
         "spatie/laravel-permission": "^6.16",
         "wireui/wireui": "^2.4"
     },
